configurations/openbao/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao
  namespace: openbao
spec:
  parentRefs:
  - name: front-door
    sectionName: https
    namespace: gateway-api
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - openbao.hunt.internal
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: openbao-ui
      port: 8200
      weight: 1
      kind: Service
